--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,36 @@
 # Docker Compose for Resolution Recap
 # This ensures proper data persistence across rebuilds
 
-version: '3.8'
-
 services:
   app:
     build: .
-    ports:
-      - "3000:3000"
+    # Don't map to host port - Dokploy handles reverse proxy
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=production
       - HOST=0.0.0.0
       - PORT=3000
       - DB_PATH=/app/data/resolution-recap.db
-      - TRACKER_PIN=${TRACKER_PIN:-1234}
-      - ADMIN_PIN=${ADMIN_PIN:-admin}
+      # Set these in Dokploy environment variables!
+      - TRACKER_PIN=${TRACKER_PIN}
+      - ADMIN_PIN=${ADMIN_PIN}
+      - BACKUP_TOKEN=${BACKUP_TOKEN}
+      - BASE_PATH=${BASE_PATH:-/snapvrienden-r3c4p}
     volumes:
-      # CRITICAL: This volume persists the database across rebuilds!
+      # CRITICAL: Mount a persistent volume for the database
+      # In Dokploy, go to "Mounts" and add:
+      #   Type: Volume
+      #   Source: resolution-recap-data (or any name)
+      #   Target: /app/data
       - resolution-recap-data:/app/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/snapvrienden-r3c4p/"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 15s
 
-# Named volume for database persistence
 volumes:
   resolution-recap-data:
-    driver: local
