Update environment configuration and Docker Compose settings: Add BASE_PATH and DOMAIN variables, and clarify volume configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,21 @@
+# =================================
+# Resolution Recap Environment Config
+# =================================
+
+# Database path (local dev uses relative, production uses /app/data/)
 DB_PATH=./data/resolution-recap.db
+
+# Security PINs
 TRACKER_PIN=change-this-pin
 ADMIN_PIN=change-this-admin-pin
 BACKUP_TOKEN=change-this-backup-token
+
+# =================================
+# Dokploy/Docker Deployment Config
+# =================================
+
+# Base path for the application (must start with /)
+BASE_PATH=/snapvrienden-r3c4p
+
+# Domain for Traefik routing (production only)
+DOMAIN=example.com
