Refactor Docker Compose configuration: Update port exposure for Traefik routing and clarify comments for better understanding.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@
 services:
   app:
     build: .
-    # Expose port for Dokploy/Traefik to route to
-    ports:
-      - "3000:3000"
+    # Expose port internally for Dokploy/Traefik to route to (not mapped to host)
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=production
       - HOST=0.0.0.0
