Refactor Docker Compose configuration: Move network definition to the top level and ensure proper service association.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,13 @@ services:
       timeout: 10s
       retries: 3
       start_period: 15s
+    networks:
+      - dokploy-network
 
 volumes:
   resolution-recap-data:
     name: resolution-recap-data
+
+networks:
+  dokploy-network:
+    external: true
