Refactor environment and Docker Compose configuration: Add DOMAIN and ORIGIN variables for Traefik routing, enhance security headers, and improve healthcheck settings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - HOST=0.0.0.0
       - PORT=3000
       - DB_PATH=/app/data/resolution-recap.db
+      # SvelteKit origin for proper URL generation (REQUIRED behind reverse proxy)
+      - ORIGIN=${ORIGIN:-https://resolution-recap.avs-api.nl}
+      # Trust proxy headers from Traefik (REQUIRED for proper HTTPS detection)
       - PROTOCOL_HEADER=x-forwarded-proto
       - HOST_HEADER=x-forwarded-host
       # Set these in Dokploy environment variables!
@@ -25,37 +28,33 @@ services:
       - dokploy-network
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=dokploy-network"
-      - "traefik.http.routers.resolution-recap.rule=Host(`resolution-recap.avs-api.nl`)"
+      - "traefik.http.routers.resolution-recap.rule=Host(`${DOMAIN:-resolution-recap.avs-api.nl}`)"
       - "traefik.http.routers.resolution-recap.entrypoints=websecure"
-      - "traefik.http.routers.resolution-recap.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.resolution-recap.tls.certResolver=letsencrypt"
       - "traefik.http.services.resolution-recap.loadbalancer.server.port=3000"
-      - "traefik.http.services.resolution-recap.loadbalancer.passhostheader=true"
-      # HTTP to HTTPS redirect
-      - "traefik.http.routers.resolution-recap-http.rule=Host(`resolution-recap.avs-api.nl`)"
-      - "traefik.http.routers.resolution-recap-http.entrypoints=web"
-      - "traefik.http.routers.resolution-recap-http.middlewares=redirect-to-https"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
-      # Proxy headers for SvelteKit origin detection
+      # Security headers via Traefik
+      - "traefik.http.middlewares.resolution-recap-headers.headers.stsSeconds=31536000"
+      - "traefik.http.middlewares.resolution-recap-headers.headers.stsIncludeSubdomains=true"
+      - "traefik.http.middlewares.resolution-recap-headers.headers.stsPreload=true"
+      # Trust proxy headers for proper origin detection
       - "traefik.http.middlewares.resolution-recap-headers.headers.customRequestHeaders.X-Forwarded-Proto=https"
-      - "traefik.http.middlewares.resolution-recap-headers.headers.customRequestHeaders.X-Forwarded-Host=resolution-recap.avs-api.nl"
+      - "traefik.http.middlewares.resolution-recap-headers.headers.customRequestHeaders.X-Forwarded-Host=${DOMAIN:-resolution-recap.avs-api.nl}"
       - "traefik.http.routers.resolution-recap.middlewares=resolution-recap-headers"
     volumes:
       - resolution-recap-data:/app/data
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "-O", "/dev/null", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 15s
+      start_period: 40s
     deploy:
       resources:
         limits:
+          cpus: '1.0'
           memory: 512M
         reservations:
+          cpus: '0.25'
           memory: 128M
 
 volumes:
