--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ DB_PATH=./data/resolution-recap.db
 TRACKER_PIN=change-this-pin
 ADMIN_PIN=change-this-admin-pin
 BACKUP_TOKEN=change-this-backup-token
+
+# =================================
+# Production Deployment (Dokploy)
+# =================================
+
+# Domain for Traefik routing
+DOMAIN=resolution-recap.avs-api.nl
+
+# SvelteKit origin (REQUIRED behind reverse proxy)
+ORIGIN=https://resolution-recap.avs-api.nl
