--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,11 +43,11 @@ services:
     volumes:
       - resolution-recap-data:/app/data
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "-O", "/dev/null", "http://localhost:3000"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "-O", "/dev/null", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 15s
     deploy:
       resources:
         limits:
