--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 # Docker Compose for Resolution Recap
-# Configured for Dokploy deployment automation
+# Configured for Dokploy deployment automation (Docker Swarm mode)
 
 services:
   app:
     build: .
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
     environment:
       - TZ=Europe/Amsterdam
       - NODE_ENV=production
@@ -24,20 +21,6 @@ services:
       - BACKUP_TOKEN=${BACKUP_TOKEN}
     networks:
       - dokploy-network
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.resolution-recap.rule=Host(`${DOMAIN:-resolution-recap.avs-api.nl}`)"
-      - "traefik.http.routers.resolution-recap.entrypoints=websecure"
-      - "traefik.http.routers.resolution-recap.tls.certResolver=letsencrypt"
-      - "traefik.http.services.resolution-recap.loadbalancer.server.port=3000"
-      # Security headers via Traefik
-      - "traefik.http.middlewares.resolution-recap-headers.headers.stsSeconds=31536000"
-      - "traefik.http.middlewares.resolution-recap-headers.headers.stsIncludeSubdomains=true"
-      - "traefik.http.middlewares.resolution-recap-headers.headers.stsPreload=true"
-      # Trust proxy headers for proper origin detection
-      - "traefik.http.middlewares.resolution-recap-headers.headers.customRequestHeaders.X-Forwarded-Proto=https"
-      - "traefik.http.middlewares.resolution-recap-headers.headers.customRequestHeaders.X-Forwarded-Host=${DOMAIN:-resolution-recap.avs-api.nl}"
-      - "traefik.http.routers.resolution-recap.middlewares=resolution-recap-headers"
     volumes:
       - resolution-recap-data:/app/data
     healthcheck:
@@ -47,6 +30,18 @@ services:
       retries: 3
       start_period: 15s
     deploy:
+      mode: replicated
+      replicas: 1
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.resolution-recap.rule=Host(`resolution-recap.avs-api.nl`)"
+        - "traefik.http.routers.resolution-recap.entrypoints=websecure"
+        - "traefik.http.routers.resolution-recap.tls.certResolver=letsencrypt"
+        - "traefik.http.services.resolution-recap.loadbalancer.server.port=3000"
+        # Security headers
+        - "traefik.http.middlewares.resolution-recap-headers.headers.stsSeconds=31536000"
+        - "traefik.http.middlewares.resolution-recap-headers.headers.stsIncludeSubdomains=true"
+        - "traefik.http.routers.resolution-recap.middlewares=resolution-recap-headers"
       resources:
         limits:
           cpus: '1.0'
